k8s/image-service/image-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-service
  namespace: shopifake-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: image-service
        image: ghcr.io/a-fleury-dev/shopifake/image-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: image-service
  namespace: shopifake-prod
spec:
  selector:
    app: image-service
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
